#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased):

    - default_variants now handles multiple values correctly (ticket #11828, eridius r24450).

    - ln uses new symlink command so it can create symlinks that point to
      files that don't actually exist (eridius r24444).

    - New bare-bones Pextlib command `symlink source target` (ticket #11840, eridius r24444).

    - delete reimplemented using fs-traverse (eridius r24435).

    - fs-traverse now uses the fts(3) family of functions instead of readdir/opendir.
      This fixes a couple behavioral oddities, and makes deleting during traversal work on 10.3
      (ticket #11839, eridius r24423).

    - fs-traverse now takes a list of targets rather than a variable number of arguments
      (ticket #11836, eridius r24410).

    - Fixed a potential crasher in fs-traverse when showing error message
      (ticket #11827, eridius r24396, thanks sfiera).
    
    - Fixed a bug where livecheck failed on ports that do not define a homepage
      (ticket #11818, pguyot r24319).

    - Added the downloads section of our repo to the macports mirrors list (jmpp r24278).

    - Fixed a bug with the archive mode introduced with r23238 change (1.4.1)
      (pguyot r24273).

    - Trace mode now take dependencies into account when executing the activate
      phase. This fixes an unwanted warning when activating ports that depend
      on teTeX (pguyot r24199).
      
    - Support for mpwa submit through "port submit".
      This work is in progress. (jberry)
       - Expose autoconf XAR variable as portutil::autoconf::xar_path. (r24194).
       - Start to build portpkg.xar and meta data, hijacking Kevin's
         portsubmit.tcl. (r24195-24196).

Release 1.4.3 (17-Apr-2007):

    - Fix bug in launchd support, introduced in 1.4.2. Remove remnants of
      launchd enable flag which caused reversion to systemstarter in 1.4.2.
      (jberry r24151).
      